generated/SimpleCSharpParser.py
# Generated from grammars/SimpleCSharpParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleCSharpParser ( Parser ):

    grammarFileName = "SimpleCSharpParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'while'", "'for'", 
                     "'do'", "'switch'", "'case'", "'default'", "'break'", 
                     "'continue'", "'return'", "'try'", "'catch'", "'finally'", 
                     "'throw'", "'goto'", "'int'", "'float'", "'double'", 
                     "'char'", "'string'", "'bool'", "'void'", "'object'", 
                     "'var'", "'null'", "'class'", "'struct'", "'interface'", 
                     "'enum'", "'namespace'", "'using'", "'public'", "'private'", 
                     "'protected'", "'internal'", "'static'", "'virtual'", 
                     "'override'", "'abstract'", "'sealed'", "'readonly'", 
                     "'const'", "'new'", "'this'", "'base'", "'in'", "'out'", 
                     "'ref'", "'params'", "'is'", "'as'", "'typeof'", "'true'", 
                     "'false'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "'+='", "'-='", "'*='", "'/='", "'%='", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", "'!'", 
                     "'&'", "'|'", "'^'", "'~'", "'<<'", "'>>'", "'++'", 
                     "'--'", "'??'", "'?'", "':'", "';'", "','", "'.'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "FOR", "DO", "SWITCH", 
                      "CASE", "DEFAULT", "BREAK", "CONTINUE", "RETURN", 
                      "TRY", "CATCH", "FINALLY", "THROW", "GOTO", "INT", 
                      "FLOAT", "DOUBLE", "CHAR", "STRING", "BOOL", "VOID", 
                      "OBJECT", "VAR", "NULL", "CLASS", "STRUCT", "INTERFACE", 
                      "ENUM", "NAMESPACE", "USING", "PUBLIC", "PRIVATE", 
                      "PROTECTED", "INTERNAL", "STATIC", "VIRTUAL", "OVERRIDE", 
                      "ABSTRACT", "SEALED", "READONLY", "CONST", "NEW", 
                      "THIS", "BASE", "IN", "OUT", "REF", "PARAMS", "IS", 
                      "AS", "TYPEOF", "TRUE", "FALSE", "IDENT", "INTEGER", 
                      "FLOAT_LITERAL", "STRING_LITERAL", "CHAR_LITERAL", 
                      "PLUS", "MINUS", "STAR", "DIV", "MOD", "ASSIGN", "PLUS_ASSIGN", 
                      "MINUS_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
                      "EQUAL", "NOTEQUAL", "LT", "GT", "LE", "GE", "AND", 
                      "OR", "NOT", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_NOT", 
                      "LSHIFT", "RSHIFT", "INCREMENT", "DECREMENT", "NULL_COALESCING", 
                      "TERNARY_COND", "COLON", "SEMICOLON", "COMMA", "DOT", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "LINE_COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_compilationUnit = 0
    RULE_usingDirective = 1
    RULE_namespaceDecl = 2
    RULE_classDecl = 3
    RULE_accessModifier = 4
    RULE_classMember = 5
    RULE_constructorDecl = 6
    RULE_methodDecl = 7
    RULE_parameterList = 8
    RULE_parameter = 9
    RULE_varDecl = 10
    RULE_type = 11
    RULE_statement = 12
    RULE_block = 13
    RULE_breakStatement = 14
    RULE_expressionStatement = 15
    RULE_ifStatement = 16
    RULE_forStatement = 17
    RULE_forInit = 18
    RULE_whileStatement = 19
    RULE_doWhileStatement = 20
    RULE_switchStatement = 21
    RULE_switchBlock = 22
    RULE_switchSection = 23
    RULE_switchLabel = 24
    RULE_tryCatchStatement = 25
    RULE_catchClause = 26
    RULE_finallyClause = 27
    RULE_returnStatement = 28
    RULE_expression = 29
    RULE_assignmentExpr = 30
    RULE_logicExpr = 31
    RULE_equalityExpr = 32
    RULE_relationalExpr = 33
    RULE_additiveExpr = 34
    RULE_multExpr = 35
    RULE_unaryExpr = 36
    RULE_postfixExpr = 37
    RULE_primaryExpr = 38
    RULE_literal = 39
    RULE_constantExpression = 40
    RULE_argumentList = 41

    ruleNames =  [ "compilationUnit", "usingDirective", "namespaceDecl", 
                   "classDecl", "accessModifier", "classMember", "constructorDecl", 
                   "methodDecl", "parameterList", "parameter", "varDecl", 
                   "type", "statement", "block", "breakStatement", "expressionStatement", 
                   "ifStatement", "forStatement", "forInit", "whileStatement", 
                   "doWhileStatement", "switchStatement", "switchBlock", 
                   "switchSection", "switchLabel", "tryCatchStatement", 
                   "catchClause", "finallyClause", "returnStatement", "expression", 
                   "assignmentExpr", "logicExpr", "equalityExpr", "relationalExpr", 
                   "additiveExpr", "multExpr", "unaryExpr", "postfixExpr", 
                   "primaryExpr", "literal", "constantExpression", "argumentList" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    FOR=4
    DO=5
    SWITCH=6
    CASE=7
    DEFAULT=8
    BREAK=9
    CONTINUE=10
    RETURN=11
    TRY=12
    CATCH=13
    FINALLY=14
    THROW=15
    GOTO=16
    INT=17
    FLOAT=18
    DOUBLE=19
    CHAR=20
    STRING=21
    BOOL=22
    VOID=23
    OBJECT=24
    VAR=25
    NULL=26
    CLASS=27
    STRUCT=28
    INTERFACE=29
    ENUM=30
    NAMESPACE=31
    USING=32
    PUBLIC=33
    PRIVATE=34
    PROTECTED=35
    INTERNAL=36
    STATIC=37
    VIRTUAL=38
    OVERRIDE=39
    ABSTRACT=40
    SEALED=41
    READONLY=42
    CONST=43
    NEW=44
    THIS=45
    BASE=46
    IN=47
    OUT=48
    REF=49
    PARAMS=50
    IS=51
    AS=52
    TYPEOF=53
    TRUE=54
    FALSE=55
    IDENT=56
    INTEGER=57
    FLOAT_LITERAL=58
    STRING_LITERAL=59
    CHAR_LITERAL=60
    PLUS=61
    MINUS=62
    STAR=63
    DIV=64
    MOD=65
    ASSIGN=66
    PLUS_ASSIGN=67
    MINUS_ASSIGN=68
    MUL_ASSIGN=69
    DIV_ASSIGN=70
    MOD_ASSIGN=71
    EQUAL=72
    NOTEQUAL=73
    LT=74
    GT=75
    LE=76
    GE=77
    AND=78
    OR=79
    NOT=80
    BIT_AND=81
    BIT_OR=82
    BIT_XOR=83
    BIT_NOT=84
    LSHIFT=85
    RSHIFT=86
    INCREMENT=87
    DECREMENT=88
    NULL_COALESCING=89
    TERNARY_COND=90
    COLON=91
    SEMICOLON=92
    COMMA=93
    DOT=94
    LPAREN=95
    RPAREN=96
    LBRACE=97
    RBRACE=98
    LBRACK=99
    RBRACK=100
    LINE_COMMENT=101
    BLOCK_COMMENT=102
    WS=103

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SimpleCSharpParser.EOF, 0)

        def usingDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCSharpParser.UsingDirectiveContext)
            else:
                return self.getTypedRuleContext(SimpleCSharpParser.UsingDirectiveContext,i)


        def namespaceDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCSharpParser.NamespaceDeclContext)
            else:
                return self.getTypedRuleContext(SimpleCSharpParser.NamespaceDeclContext,i)


        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCSharpParser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(SimpleCSharpParser.ClassDeclContext,i)


        def getRuleIndex(self):
            return SimpleCSharpParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = SimpleCSharpParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 135425687552) != 0):
                self.state = 87
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [32]:
                    self.state = 84
                    self.usingDirective()
                    pass
                elif token in [31]:
                    self.state = 85
                    self.namespaceDecl()
                    pass
                elif token in [27, 33, 34, 35, 36]:
                    self.state = 86
                    self.classDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(SimpleCSharpParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsingDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USING(self):
            return self.getToken(SimpleCSharpParser.USING, 0)

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCSharpParser.IDENT)
            else:
                return self.getToken(SimpleCSharpParser.IDENT, i)

        def SEMICOLON(self):
            return self.getToken(SimpleCSharpParser.SEMICOLON, 0)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCSharpParser.DOT)
            else:
                return self.getToken(SimpleCSharpParser.DOT, i)

        def getRuleIndex(self):
            return SimpleCSharpParser.RULE_usingDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsingDirective" ):
                listener.enterUsingDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsingDirective" ):
                listener.exitUsingDirective(self)




    def usingDirective(self):

        localctx = SimpleCSharpParser.UsingDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_usingDirective)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(SimpleCSharpParser.USING)
            self.state = 95
            self.match(SimpleCSharpParser.IDENT)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==94:
                self.state = 96
                self.match(SimpleCSharpParser.DOT)
                self.state = 97
                self.match(SimpleCSharpParser.IDENT)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(SimpleCSharpParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAMESPACE(self):
            return self.getToken(SimpleCSharpParser.NAMESPACE, 0)

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCSharpParser.IDENT)
            else:
                return self.getToken(SimpleCSharpParser.IDENT, i)

        def LBRACE(self):
            return self.getToken(SimpleCSharpParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SimpleCSharpParser.RBRACE, 0)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCSharpParser.DOT)
            else:
                return self.getToken(SimpleCSharpParser.DOT, i)

        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCSharpParser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(SimpleCSharpParser.ClassDeclContext,i)


        def getRuleIndex(self):
            return SimpleCSharpParser.RULE_namespaceDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespaceDecl" ):
                listener.enterNamespaceDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespaceDecl" ):
                listener.exitNamespaceDecl(self)




    def namespaceDecl(self):

        localctx = SimpleCSharpParser.NamespaceDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_namespaceDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(SimpleCSharpParser.NAMESPACE)
            self.state = 106
            self.match(SimpleCSharpParser.IDENT)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==94:
                self.state = 107
                self.match(SimpleCSharpParser.DOT)
                self.state = 108
                self.match(SimpleCSharpParser.IDENT)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(SimpleCSharpParser.LBRACE)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 128983236608) != 0):
                self.state = 115
                self.classDecl()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(SimpleCSharpParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(SimpleCSharpParser.CLASS, 0)

        def IDENT(self):
            return self.getToken(SimpleCSharpParser.IDENT, 0)

        def LBRACE(self):
            return self.getToken(SimpleCSharpParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SimpleCSharpParser.RBRACE, 0)

        def classMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCSharpParser.ClassMemberContext)
            else:
                return self.getTypedRuleContext(SimpleCSharpParser.ClassMemberContext,i)


        def PUBLIC(self):
            return self.getToken(SimpleCSharpParser.PUBLIC, 0)

        def PRIVATE(self):
            return self.getToken(SimpleCSharpParser.PRIVATE, 0)

        def PROTECTED(self):
            return self.getToken(SimpleCSharpParser.PROTECTED, 0)

        def INTERNAL(self):
            return self.getToken(SimpleCSharpParser.INTERNAL, 0)

        def getRuleIndex(self):
            return SimpleCSharpParser.RULE_classDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDecl" ):
                listener.enterClassDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDecl" ):
                listener.exitClassDecl(self)




    def classDecl(self):

        localctx = SimpleCSharpParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 128849018880) != 0):
                self.state = 123
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 128849018880) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 126
            self.match(SimpleCSharpParser.CLASS)
            self.state = 127
            self.match(SimpleCSharpParser.IDENT)
            self.state = 128
            self.match(SimpleCSharpParser.LBRACE)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 72066519030169600) != 0):
                self.state = 129
                self.classMember()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(SimpleCSharpParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(SimpleCSharpParser.PUBLIC, 0)

        def PRIVATE(self):
            return self.getToken(SimpleCSharpParser.PRIVATE, 0)

        def PROTECTED(self):
            return self.getToken(SimpleCSharpParser.PROTECTED, 0)

        def INTERNAL(self):
            return self.getToken(SimpleCSharpParser.INTERNAL, 0)

        def getRuleIndex(self):
            return SimpleCSharpParser.RULE_accessModifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccessModifier" ):
                listener.enterAccessModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccessModifier" ):
                listener.exitAccessModifier(self)




    def accessModifier(self):

        localctx = SimpleCSharpParser.AccessModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_accessModifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 128849018880) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDecl(self):
            return self.getTypedRuleContext(SimpleCSharpParser.MethodDeclContext,0)


        def accessModifier(self):
            return self.getTypedRuleContext(SimpleCSharpParser.AccessModifierContext,0)


        def constructorDecl(self):
            return self.getTypedRuleContext(SimpleCSharpParser.ConstructorDeclContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(SimpleCSharpParser.VarDeclContext,0)


        def getRuleIndex(self):
            return SimpleCSharpParser.RULE_classMember

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassMember" ):
                listener.enterClassMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassMember" ):
                listener.exitClassMember(self)




    def classMember(self):

        localctx = SimpleCSharpParser.ClassMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classMember)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 128849018880) != 0):
                    self.state = 139
                    self.accessModifier()


                self.state = 142
                self.methodDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 128849018880) != 0):
                    self.state = 143
                    self.accessModifier()


                self.state = 146
                self.constructorDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 128849018880) != 0):
                    self.state = 147
                    self.accessModifier()


                self.state = 150
                self.varDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(SimpleCSharpParser.IDENT, 0)

        def LPAREN(self):
            return self.getToken(SimpleCSharpParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SimpleCSharpParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(SimpleCSharpParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(SimpleCSharpParser.ParameterListContext,0)


        def getRuleIndex(self):
            return SimpleCSharpParser.RULE_constructorDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructorDecl" ):
                listener.enterConstructorDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructorDecl" ):
                listener.exitConstructorDecl(self)




    def constructorDecl(self):

        localctx = SimpleCSharpParser.ConstructorDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constructorDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(SimpleCSharpParser.IDENT)
            self.state = 154
            self.match(SimpleCSharpParser.LPAREN)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 72057594088128512) != 0):
                self.state = 155
                self.parameterList()


            self.state = 158
            self.match(SimpleCSharpParser.RPAREN)
            self.state = 159
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(SimpleCSharpParser.TypeContext,0)


        def IDENT(self):
            return self.getToken(SimpleCSharpParser.IDENT, 0)

        def LPAREN(self):
            return self.getToken(SimpleCSharpParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SimpleCSharpParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(SimpleCSharpParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(SimpleCSharpParser.ParameterListContext,0)


        def getRuleIndex(self):
            return SimpleCSharpParser.RULE_methodDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDecl" ):
                listener.enterMethodDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDecl" ):
                listener.exitMethodDecl(self)




    def methodDecl(self):

        localctx = SimpleCSharpParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_methodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.type_()
            self.state = 162
            self.match(SimpleCSharpParser.IDENT)
            self.state = 163
            self.match(SimpleCSharpParser.LPAREN)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 72057594088128512) != 0):
                self.state = 164
                self.parameterList()


            self.state = 167
            self.match(SimpleCSharpParser.RPAREN)
            self.state = 168
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCSharpParser.ParameterContext)
            else:
                return self.getTypedRuleContext(SimpleCSharpParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleCSharpParser.COMMA)
            else:
                return self.getToken(SimpleCSharpParser.COMMA, i)

        def getRuleIndex(self):
            return SimpleCSharpParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):
